# indexa-http

./: Cargo.toml  README.md
src/: index.html  indexa_config.rs  main.rs  routes.rs
src/routes/: info.rs  search.rs
